@@ -338,6 +338,11 @@ DEFAULT_STRUCTURE_NAME = gettext_noop('Default')
 SNAP_DISTANCE = 30  # Distance of snapping in pixels
 
 ALTIMETRIC_PROFILE_PRECISION = 25  # Sampling precision in meters
+ALTIMETRIC_PROFILE_BACKGROUND = 'white'
+ALTIMETRIC_PROFILE_COLOR = '#5393E8'
+ALTIMETRIC_PROFILE_HEIGHT = 400
+ALTIMETRIC_PROFILE_WIDTH = 800
+ALTIMETRIC_PROFILE_FONTSIZE = 25
 
 # Let this be defined at instance-level
 LEAFLET_CONFIG = {
